[package]
name = "gust-core"
version = "0.1.0"
edition = "2021"

[dependencies.sdl2]
version = "0.36.0"
default-features = false
features = ["image"]

[dependencies]
glium = "*"
winit = "*"
gust-math = { path = "../gust-math" }
gust-hierarchy = { path = "../gust-hierarchy" }
smol_str = "0.2.2"
image = "*"