[package]
name = "gust-systems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.35.0"
winit = "0.30.5"
gust-core = { path = "../gust-core" }
gust-math = { path = "../gust-math" }
gust-components = { path = "../gust-components" }
gust-hierarchy = { path = "../gust-hierarchy" }
image = "*"
