[package]
name = "gust-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.36.0"
default-features = false
features = ["image"]

[dependencies]
glium = "*"
winit = "*"
image = "0.25.0"
gust-core = { path = "../gust-core" }
smol_str = "*"
gust-math = { path = "../gust-math" }
gust-hierarchy = { path = "../gust-hierarchy" }